infra/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-ui-deployment
  namespace: k8s-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-ui
  template:
    metadata:
      matchLabels:
        app: k8s-demo-ui
  spec:
    containers:
      - name: k8s-demo-ui
        image: swiftlee/k8s-keycloak-demo-ui:1.0.0
        ports:
        - containerPort: 3000
