infra/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-ui-service
  namespace: k8s-demo-app
spec:
  selector:
    app: k8s-demo-ui
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
