infra/ui/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ui-virtual-service
  namespace: k8s-demo-app
spec:
  hosts:
    - k8s-demo.local
  gateways:
    - istio-system/main # expose the ui external to the cluster
  http:
    - match:
      - uri:
          prefix: "/api/"
      - uri:
          prefix: "/saml/"
      route:
        - destination:
            host: k8s-demo-api-service
            port:
              number: 8000
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: k8s-demo-ui-service
            port:
              number: 3000
      timeout: 15s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
